--- a/freshshop-master/board-detail.html
+++ b/freshshop-master/board-detail.html
@@ -34,138 +34,13 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- 결 커스텀 css -->
+    <link rel="stylesheet" href="css/style-gyul.css">
+
 <style>
 
 
-.line-paint{
-        border: thin solid rgb(209, 154, 34);
-        margin-top: 30px;
-        margin-bottom: 10px;
-        width: 80%;
-    }
-.board-type{
-        display: inline-block;
-        margin-left: 10%;
-    }
-.board-type > h1 {
-        color: rgb(209, 154, 34);
-        font-size: 40px;
-    }    
 
-/* 페이지 관련 소스 */
-    
-    ::-webkit-scrollbar {
-        width: 6px;
-    } 
-    ::-webkit-scrollbar-track {
-        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    } 
-    ::-webkit-scrollbar-thumb {
-        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    }
-    .page-div{
-        margin: 4%;
-    }
-    .page-link{
-      background-color: rgba(204, 156, 22, 0.8);
-      color: white;
-    }
-
-/* 페이지 관련 소스 끝 */
-
-
-
-
-.main-search-input-item input {
-
-    width: 100%;
-    height: 50px;
-    padding-left: 20px
-}
-
-.main-search-button {
-    background: #e0a1187a
-}
-
-.main-search-button {
-    position: absolute;
-    right: 0px;
-    height: 50px;
-    width: 120px;
-    color: rgb(255, 255, 255);
-    top: 0;
-    border: none;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-    cursor: pointer
-}
-.main-search-button:hover {
-  background: #665d087a;
-  cursor: pointer;
-}
-.main-search-input-wrap {
-    width: 500px;
-    margin: 20px auto;
-    position: relative
-}
-:focus {
-    outline: 0
-}
-
-@media only screen and (max-width: 768px) {
-    .main-search-input {
-        background: rgba(255, 255, 255, 0.2);
-        padding: 14px 20px 10px;
-        border-radius: 10px;
-        box-shadow: 0px 0px 0px 10px rgba(255, 255, 255, 0.0)
-    }
-
-    .main-search-input-item {
-        width: 100%;
-        border: 1px solid #eee;
-        height: 50px;
-        border: none;
-        margin-bottom: 10px
-    }
-
-    .main-search-input-item input {
-        border-radius: 6px !important;
-        background: #fff
-    }
-
-    .main-search-button {
-        position: relative;
-        float: left;
-        width: 100%;
-        border-radius: 6px
-    }
-
-}
-/* 서치바 관련 스타일 종료 */
-
-.board_title, .board_writer, .board_regDate, .board_seq{
-    color: rgb(196, 118, 24);
-}
-.btn-update{
-    color: rgb(189, 118, 25);
-}
-.btn-delete {
-    color: red;
-}
-.btn-delete:hover {
-    color: red;
-}
-.btn-success{
-    background-color: rgba(204, 156, 22, 0.8);
-    border:rgb(189, 118, 25) ;
-}
-.btn-success:hover{
-    background-color: rgb(189, 118, 25);
-    border:rgb(189, 118, 25) ;
-}
-.writer{
-    
-}
   
 </style>
 
