--- a/freshshop-master/board-free-form.html
+++ b/freshshop-master/board-free-form.html
@@ -29,37 +29,16 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
 
+    <!-- 결 커스텀 css -->
+    <link rel="stylesheet" href="css/style-gyul.css">
+
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
 <style>
-    .option-select{
-        width: 150px;
-        padding: 15px;
-    }
-    .input-nickname, .input-title{
-        width: 25rem;
-        overflow: auto;
-    }
-    .content{
-        width: 100%;
-    height: 100%; 
-    box-sizing: border-box;
-    }
-    .card{
-        border: 3px solid rgb(216, 131, 51);
-    }
-    .btn-complete{
-        background-color:rgb(221, 194, 169) ;
-    }
-    .btn-complete:hover{
-        background-color:rgb(216, 131, 51);
-    }
-    .btn-file-upload{
-        padding: 12px;
-    }
+
 </style>
 
 </head>
