--- a/freshshop-master/board-notice.html
+++ b/freshshop-master/board-notice.html
@@ -29,211 +29,15 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
 
+    <link rel="stylesheet" href="css/style-gyul.css">
+
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
 <style>
-#slides-shop{
-    height: 200px;
-}
-.text-center{
-    width: 100px;
-}
-.btn-next, .btn-prev{
-    background-color: aliceblue;
-}
-.line-paint{
-    border: thin solid rgb(209, 154, 34);
-    margin-top: 50px;
-    margin-bottom: 70px;
-    width: 80%;
-}
-.board-type{
-    display: inline-block;
-    margin-left: 10%;
-}
-.board-type > h1 {
-    color: rgb(209, 154, 34);
-    font-size: 40px;
-}
-.board-table{
-    width:100%;
-    table-layout: fixed;
-  }
 
-  
-  .tbl-header{
-    background-color: rgba(204, 156, 22, 0.8);
-   }
-  .tbl-content{
-    height:600px;
-    overflow:hidden;
-    margin-top: 0px;
-    border: 1px solid rgba(34, 31, 31, 0.8);
-  }
-  th{
-    padding: 20px 15px;
-    text-align: left;
-    font-weight: 500;
-    font-size: 12px;
-    color: rgb(29, 25, 25);
-    text-transform: uppercase;
-  }
-  td{
-    padding: 15px;
-    text-align: left;
-    vertical-align:middle;
-    font-weight: 300;
-    font-size: 12px;
-    color: rgb(29, 25, 25);
-    border-bottom: solid 1px rgba(255,255,255,0.1);
-    word-wrap: break-word;
-  }
-  
-  
-  /* demo styles */
-  
-  @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
-
-  section{
-    margin: 50px;
-  }
-  .title{
-    width:60%;
-  }
-  
-  /* for custom scrollbar for webkit browser*/
-  
-  ::-webkit-scrollbar {
-      width: 6px;
-  } 
-  ::-webkit-scrollbar-track {
-      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-  } 
-  ::-webkit-scrollbar-thumb {
-      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-  }
-  .page-div{
-      margin: 4%;
-  }
-  .page-link{
-    background-color: rgba(204, 156, 22, 0.8);
-    color: white;
-  }
-
-  /* 서치바 관련 스타일*/
-  
-  .main-search-input {
-    background: #fff;
-    padding: 0 120px 0 0;
-    border-radius: 1px;
-    margin-top: 20px;
-    box-shadow: 0px 0px 0px 6px rgba(255, 255, 255, 0.3)
-}
-
-.fl-wrap {
-    float: left;
-    width: 100%;
-    position: relative
-}
-
-.main-search-input:before {
-    content: '';
-    position: absolute;
-    bottom: -40px;
-    width: 50px;
-    height: 1px;
-    background: rgba(255, 255, 255, 0.41);
-    left: 50%;
-    margin-left: -25px
-}
-
-.main-search-input-item {
-    float: left;
-    width: 100%;
-    box-sizing: border-box;
-    border-right: 1px solid #eee;
-    height: 50px;
-    position: relative
-}
-
-.main-search-input-item input:first-child {
-    border-radius: 100%
-}
-
-.main-search-input-item input {
-    float: left;
-    border: none;
-    width: 100%;
-    height: 50px;
-    padding-left: 20px
-}
-
-.main-search-button {
-    background: #e0a1187a
-}
-
-.main-search-button {
-    position: absolute;
-    right: 0px;
-    height: 50px;
-    width: 120px;
-    color: rgb(255, 255, 255);
-    top: 0;
-    border: none;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-    cursor: pointer
-}
-.main-search-button:hover {
-  background: #665d087a;
-  cursor: pointer;
-}
-
-.main-search-input-wrap {
-    max-width: 500px;
-    margin: 20px auto;
-    
-    position: relative
-}
-
-:focus {
-    outline: 0
-}
-
-@media only screen and (max-width: 768px) {
-    .main-search-input {
-        background: rgba(255, 255, 255, 0.2);
-        padding: 14px 20px 10px;
-        border-radius: 10px;
-        box-shadow: 0px 0px 0px 10px rgba(255, 255, 255, 0.0)
-    }
-
-    .main-search-input-item {
-        width: 100%;
-        border: 1px solid #eee;
-        height: 50px;
-        border: none;
-        margin-bottom: 10px
-    }
-
-    .main-search-input-item input {
-        border-radius: 6px !important;
-        background: #fff
-    }
-
-    .main-search-button {
-        position: relative;
-        float: left;
-        width: 100%;
-        border-radius: 6px
-    }
-
-/* 서치바 관련 스타일 종료 */
-
-}
   
 </style>
 
