마이페이지(동물관리) 수정

--- a/freshshop-master_1차/my_account(동물관리)-실비아.html
+++ b/freshshop-master_1차/my_account(동물관리)-실비아.html
@@ -22,7 +22,9 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="css/responsive.css">
     <!-- Custom_실비아 CSS -->
-    <link rel="stylesheet" href="css/custom-실비아.css">
+    <link rel="stylesheet" href="css/custom-silbia.css">
+
+    
 </head>
 
 <body>
@@ -68,7 +70,7 @@
     <!-- End Main Top -->
 
     <!-- Start 반려동물 관리 타이틀 영역 -->
-    <div class="all-title-box">
+    <div class="pet-all-title-box">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -78,6 +80,83 @@
         </div>
     </div>
     <!-- End 반려동물 관리 타이틀 영역 -->
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-6" style="padding: 20px;">
+                <div class="card"> <img src="images/pet-img-01.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> 수정</button>
+                        <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i>삭제</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6" style="padding: 20px;">
+                <div class="card-body">
+                    <h2 class="card-title"><b>동동</b></h2>
+                    <p class="card-text">
+                        나이 : 8살<br>
+                        종류 : 말티즈 <br>
+                        성별 : 남
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6" style="padding: 20px;"> 
+                <div class="card"> <img src="images/pet-img-04.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> 수정</button>
+                        <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i>삭제</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6" style="padding: 20px;">
+                <div class="card-body">
+                    <h2 class="card-title"><b>동동</b></h2>
+                    <p class="card-text">
+                        나이 : 8살<br>
+                        종류 : 말티즈 <br>
+                        성별 : 남
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6" style="padding: 20px;">
+                <div class="card"> <img src="images/pet-img-01.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> 수정</button>
+                        <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i>삭제</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6" style="padding: 20px;">
+                <div class="card-body">
+                    <h2 class="card-title"><b>동동</b></h2>
+                    <p class="card-text">
+                        나이 : 8살<br>
+                        종류 : 말티즈 <br>
+                        성별 : 남
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6" style="padding: 20px;">
+                <div class="card"> <img src="images/pet-img-04.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> 수정</button>
+                        <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i>삭제</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6" style="padding: 20px;">
+                <div class="card-body">
+                    <h2 class="card-title"><b>동동</b></h2>
+                    <p class="card-text">
+                        나이 : 8살<br>
+                        종류 : 말티즈 <br>
+                        성별 : 남
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Start 반려동물 관리 영역  -->
 
