--- a/freshshop-master_1차/user-join-form_결.html
+++ b/freshshop-master_1차/user-join-form_결.html
@@ -55,6 +55,17 @@
         margin: auto;
     }
 
+    .column-div-1{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 150px;
+        height: 50px;
+        background-color: antiquewhite;
+        border-radius: 100px;
+        margin: auto;
+    }
+
 </style>
 </head>
 
@@ -174,13 +185,17 @@
 
                         <div class="d-flex flex-row align-items-center mb-4">
                           <div class="form-outline flex-fill mb-0">
-                            <div class="column-div ">
+                            <div class="column-div-1">
                               <div >
                                 <label class="form-label mt-2" for="user_address">주소</label>
+                                <span>(주소검색)</span>
                               </div>    
+
                             </div>
                             <input type="tel" name="user_address" id="user_address" class="form-control" placeholder="주소" required/>
+
                           </div>
+ 
                         </div>
 
                         <div class="d-flex flex-row align-items-center mb-4">
